Fix demo view on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ canvas {position: absolute; top: 10%; left: 5%; display: inline-block;}
 
 /* DEMO */
 .demo-container {position: relative; width: 100vw; height: 100vh; max-width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -ms-flex-pack: distribute; justify-content: space-around; background-color: white}
+.demo-buttons {display: none;}
 .demo-box {display: inline-block; -webkit-box-sizing: border-box; box-sizing: border-box; width: 27.5%; height: 60vh; z-index: 100; -webkit-box-shadow: 0.2vw 0.3vw 0.3vw rgba(34,34,34,0.4); box-shadow: 0.2vw 0.3vw 0.3vw rgba(34,34,34,0.4); background-color: #73819A; -webkit-transition: all 0.3s; transition: all 0.3s;}
 .burger-box {width: 100%; height: 90%; background-color: white; overflow: hidden;}
 .shift-element {top: 25%; width: 90%; height: auto; opacity: 0; -webkit-transition: all 1s; transition: all 1s;}
@@ -172,7 +173,7 @@ canvas {position: absolute; top: 10%; left: 5%; display: inline-block;}
 .carousel {display: -webkit-box;display: -ms-flexbox;display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 86%; height: auto;}
 .carousel-image {}
 .slick-arrow {border: none; margin: 0 4%; font-size: 1.5rem; color: white; background-color: #73819A; -webkit-transition: all 0.2s; transition: all 0.2s;}
-.slick-arrow:active, #burger-button:active {-webkit-transform: translateY(0vh);transform: translateY(0vh); -webkit-box-shadow: 0vw 0vw 0vw #fff; box-shadow: 0vw 0vw 0vw #fff; -webkit-transition: all 0.2s; transition: all 0.2s;}
+.slick-arrow:active, #burger-button:active, .demo-buttons button:active {-webkit-transform: translateY(0vh);transform: translateY(0vh); -webkit-box-shadow: 0vw 0vw 0vw #fff; box-shadow: 0vw 0vw 0vw #fff; -webkit-transition: all 0.2s; transition: all 0.2s;}
 #shift-container {width: 80%; height: 100%; margin: 0 auto; -webkit-transition: all 2s ease; transition: all 2s ease;}
 #burger-shadow     {z-index:  5;}
 #burger-bun-bottom {z-index: 10;}
@@ -283,8 +284,14 @@ a.link-logo img {width: 100%; -webkit-transition: all 0.2s; transition: all 0.2s
   .about-arrow {display: inline;}
 
 
-	.demo-container {height: auto; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap;}
-	.demo-box {width: 90%;}
+	.demo-container {height: 100vh; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; justify-content: flex-start;;}
+  .demo-buttons {display: block; margin-top: 18%; text-align: center;}
+  .demo-buttons button {background-color: #848484; border: none; padding: 6px; margin: 10% 12px;}
+  .demo-buttons button:active {}
+  .demo-buttons button.demo-button-current {background-color: #73819A;}
+  div.demo-box.demo-box-current {display: block;}
+	.demo-box {width: 90%; display: none;}
+  .demo-box h3 {display: none;}
 	.silhouette {width: 70%; top: 56%;}
 	#cartoon-me {display: none;}
 }
